# snip

./: .prettierignore  LICENSE  README.md  eslint.config.mjs  package.json  tailwind.config.js  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/js_runtime/snip/: index.ts
src-tauri/resources/scripts/: deno.json  global.d.ts  tsconfig.json
src-tauri/resources/scripts/commands/base64_decode/: command.json  index.ts
src-tauri/resources/scripts/commands/base64_encode/: command.json  index.ts
src-tauri/resources/scripts/commands/csv_to_json/: command.json  index.ts
src-tauri/resources/scripts/commands/date_to_unix/: command.json  index.ts
src-tauri/resources/scripts/commands/decode_jwt/: command.json  index.ts
src-tauri/resources/scripts/commands/escape_text/: command.json  index.ts
src-tauri/resources/scripts/commands/format_json/: command.json  (+1 more)
src-tauri/resources/scripts/tests/: base64_decode.ts  base64_encode.ts  csv_to_json.ts  date_to_unix.ts  decode_jwt.ts  escape_text.ts  format_json.ts  html_decode.ts  html_encode.ts  html_encode_all.ts  json_to_csv.ts  json_to_yaml.ts  md5_hash.ts  minify_json.ts  minify_xml.ts  sha1_hash.ts  sha256_hash.ts  sha512_hash.ts  sort_json.ts  unescape_text.ts  unix_to_iso8601.ts  url_decode.ts  url_encode.ts  yaml_to_json.ts
src-tauri/src/: lib.rs  main.rs  settings.rs  window.rs
src-tauri/src/scripts/: commands.rs  mod.rs
src-tauri/src/scripts/loader/: js_runtime.rs  mod.rs  scripts.rs
src-tauri/src/window/: menu.rs  mod.rs
(+61 files in other folders)
