[package]
name = "snip"
version = "0.3.0"
description = "A Tauri CodeEditor"
authors = ["Rob Bogie"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "snip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
tauri-plugin-os = "2"
sublime_fuzzy = "0.7.0"
deno_core = "0.327.0"
tokio = { version = "1.42.0", features = ["full"] }
deno_ast = { version = "0.44.0", features = ["transpiling"] }
ring = "0.17.8"
data-encoding = "2.6.0"
base64-simd = "0.8.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

